# SwissHackingChallenge2021-WriteUp

./: .gitattributes  README.md
01-Regexp-Challenge/: README.md
02-Hidden-data-in-PDF-file/: README.md
03-CrackMe-Simple-Android/: 174bb954-15e1-4483-b4ec-7e5fae2e1eff.apk  AESUtil.java  LoginViewModel.java  README.md
04-DH-MITM-lvl1/: README.html  README.md  comm.py  dh_functions.py
05-vsftpd-backdoor/: README.md
06-Mathematica/: README.md
07-API-Security/: README.md  solve.sh
08-CrackMe-Native-Android/: README.md  f65cd923-4a36-4ae6-ba82-a936c6f76514.apk  solve.py
09-BootMe/: BootMe_openwrt-malta-le-vmlinux-initramfs.elf  README.md  run.sh
10-DH-MITM-lvl2/: README.html  README.md  comm.py  dh_functions.py
11-Pathfinder/: README.md  solve.py
12-The-Lottery/: README.md  solve.sh
12-The-Lottery/v8_rand_buster/: codes.txt
13-GeoIP-Restricted-Login-Android/: README.md  Solve.java  f217e414-730a-41b8-88c5-b115cea85edf.apk  solve.sh
13-GeoIP-Restricted-Login-Android/Solve/: Cargo.toml
13-GeoIP-Restricted-Login-Android/Solve/src/: main.rs
14-Parasites/: README.md  parasites_fixed_mod
15-SSH-backdoor-analysis/: README.md
16-CrackMe-Dyn/: 56498718-3b55-4579-9fe4-92043f5a9c6d.apk  AESUtil.java  HLLoginCheck.java  README.md  classes.dex  elib.enc  solve_mod.py
