[package]
name = "Solve"
version = "0.1.0"
authors = ["Julien Béguin <julien.beguin99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
reqwest = { version = "0.11.2", features = ["blocking"] }
rayon = "1.5.0"
lazy_static = "1.4.0"